testing dotnet secrets among other things

--- a/KioskLib/KioskLib.csproj
+++ b/KioskLib/KioskLib.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <UserSecretsId>20f9daef-d3e1-4195-89be-e31c5a94b2b5</UserSecretsId>
   </PropertyGroup>
 
 </Project>
