Mock data updated to include service type, signatures are now computed, first working request 🎉

--- a/KioskApi/KioskApi.csproj
+++ b/KioskApi/KioskApi.csproj
@@ -1,9 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <UserSecretsId>e41e988a-7b20-4254-a018-2e7346eee7ae</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
